[gd_scene load_steps=7 format=3 uid="uid://dil80xpf4kokw"]

[ext_resource type="Script" path="res://player/player.gd" id="1_iq5gb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3ryi6"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6y4d7"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fpa0e"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 25.0
initial_velocity_min = 140.84
initial_velocity_max = 267.6
angular_velocity_min = 160.96
angular_velocity_max = 262.37
gravity = Vector3(0, 0, 0)
scale_max = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t4wuv"]
radius = 1.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0ps55"]
load_path = "res://.godot/imported/trump.png-e8d1ca7121916465c3711a46279a4bbb.ctex"

[node name="Player" type="RigidBody2D"]
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_3ryi6")
gravity_scale = 0.0
lock_rotation = true
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_iq5gb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6y4d7")
debug_color = Color(1, 1, 1, 0.882353)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_fpa0e")
lifetime = 0.5

[node name="CrushedArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrushedArea"]
shape = SubResource("CircleShape2D_t4wuv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.164179, 0.164179)
texture = SubResource("CompressedTexture2D_0ps55")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="CrushedArea" to="." method="_on_crushed_area_body_entered"]
